[gd_scene load_steps=18 format=3 uid="uid://bishueqfjryam"]

[ext_resource type="FontFile" uid="uid://de74dgvi227lf" path="res://Assets/DungeonFont.ttf" id="1_6tmnr"]
[ext_resource type="Script" path="res://ui scenes/difficulty_menu.gd" id="1_w44tv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhmfw"]
bg_color = Color(0.0784314, 0.00392157, 0.145098, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.172549, 0.027451, 0.380392, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_sbedy"]
font = ExtResource("1_6tmnr")
font_size = 46
font_color = Color(0.709804, 0.0705882, 0, 1)
outline_size = 4
outline_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eaonp"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.284361, 0.217438, 0.185399, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxvob"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.188235, 0.137255, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyrsr"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fb5s"]
content_margin_left = 35.0
content_margin_top = 35.0
content_margin_right = 35.0
content_margin_bottom = 35.0
bg_color = Color(0.133333, 0.00784314, 0.223529, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.509804, 0.0156863, 0.435294, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fj6ky"]
bg_color = Color(0.286275, 0.215686, 0.184314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 6.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo5fg"]
bg_color = Color(0.188235, 0.137255, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 6.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hl027"]
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 6.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g30g2"]
bg_color = Color(0.286275, 0.215686, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do6e0"]
bg_color = Color(0.188235, 0.137255, 0.113725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tihtj"]
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 6.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_beyfh"]
bg_color = Color(0.286275, 0.215686, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qh03c"]
bg_color = Color(0.189555, 0.138418, 0.115682, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea7q5"]
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 6.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[node name="difficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w44tv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.207843, 0.00392157, 0.203922, 1)

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 121.0
offset_right = 234.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rhmfw")

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
text = "DIFFICULTY SETTINGS"
label_settings = SubResource("LabelSettings_sbedy")
horizontal_alignment = 1
uppercase = true

[node name="Control" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 260.0
offset_right = 712.0
offset_bottom = 531.0
theme_override_constants/separation = 120

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_6tmnr")
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_eaonp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oxvob")
theme_override_styles/normal = SubResource("StyleBoxFlat_cyrsr")
text = "BACK"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_4fb5s")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 23
alignment = 1

[node name="easybutton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_6tmnr")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_fj6ky")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lo5fg")
theme_override_styles/normal = SubResource("StyleBoxFlat_hl027")
text = "EASY"

[node name="medbutton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_6tmnr")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_g30g2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_do6e0")
theme_override_styles/normal = SubResource("StyleBoxFlat_tihtj")
toggle_mode = true
action_mode = 0
text = "MEDIUM"

[node name="hardbutton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_6tmnr")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_beyfh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qh03c")
theme_override_styles/normal = SubResource("StyleBoxFlat_ea7q5")
toggle_mode = true
action_mode = 0
text = "HARD"

[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/easybutton" to="." method="_on_easybutton_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/medbutton" to="." method="_on_medbutton_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/hardbutton" to="." method="_on_hardbutton_pressed"]
